# compiler-explorer

./: .babelrc  .bowerrc  .clang-format  .dockerignore  .editorconfig  .eslint-license-header.yml  .eslintignore  .eslintrc  .eslintrc.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .istanbul.yml  .jshintrc  .mocharc-min.yml  .mocharc.yml  .nycrc.yml  .prettierignore  .prettierrc.js  .prettierrc.yml  .travis.yml  .travis.yml.orig  AGENTS.md  AUTHORS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Delphi & C++Builder Specifics.md  Dockerfile  LICENSE  Makefile  Notes.md  PULL_REQUEST_TEMPLATE.md  README.md  Roadmap.md  SECURITY.md  TEST-ROADMAP.md  app-exec.js  (+49 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: FUNDING.yml  actionlint.yaml  copilot-instructions.md  dependabot.yml  labeler.yml  renovate.json
.husky/: pre-commit
c-preload/: .gitignore  Makefile  compiler-wrapper  g++.sh  preload.c
cypress/: .gitignore  README.md  tsconfig.json
d/: .gitignore  Makefile  demangle.d
demo/: editor-abstraction.js  editor-demo.html
docs/: API.md  AboutLibraryPaths.md  AddingACompiler.md  AddingAFormatter.md  AddingALanguage.md  AddingALibrary.md  AddingASiteTemplate.md  AddingATool.md  AddingAssemblyDocumentation.md  AddingCustomCompilersOverview.md  AzureRemoteCompiler.md  Bootstrap5Migration.md  BuildingAdHocCompilers.md  Cerberus.md  ClaudeExplain.md  ClaudeExplainPlan.md  Compiler-Args-Debugging.md  Configuration.md  EWARM.md  EWAVR.md  EWAVR.properties  GvisorSandbox.md  HowDoI_interface.md  IDEMode.md  MCP.md  MigratingToToml.md  NsjailSandbox.md  Preupdate-Checklist.md  Privacy.md  README.md  Roadmap.md  RunningOnMacOS.md  Sponsors.md  SupportedEmulators.md  SystemdSocketActivation.md  TestingTheUi.md  TiC2000.md  TurboC.md  UpdatingAsmDocsx86.md  UsingCypress.md  (+9 more)
etc/: jshintrc.client  jshintrc.server  oldhash.txt
etc/scripts/ce-properties-wizard/: README.md  auto_discover_compilers.py  pyproject.toml  run.ps1  run.sh
etc/scripts/ce-properties-wizard/ce_properties_wizard/: __init__.py  compiler_detector.py  config_manager.py  main.py  models.py  surgical_editor.py  utils.py
etc/scripts/docenizers/: .gitignore  Makefile  aarch64.json  arm32.json  docenizer-6502.py  docenizer-amd64.py  docenizer-arm.py  docenizer-arm32.py  docenizer-avr.py  docenizer-evm.py  docenizer-java.js  docenizer-java.sh  docenizer-java.ts  docenizer-llvm.sh  docenizer-llvm.ts  docenizer-perl.py  docenizer-power.py  docenizer-ptx-sass.py  docenizer-python.py  docenizer-riscv64.py  docenizer.py  docenizerAVR.py  docenizerJava.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
etc/scripts/docenizers/manual/: manual-amd64.py
etc/scripts/gh_tool/: .gitignore  README.md  pyproject.toml  test_duplicate_finder.py
etc/scripts/gh_tool/docs/: PHASE1-FINDINGS.md  TRIAGE-CRITERIA.md
etc/scripts/gh_tool/src/gh_tool/: __init__.py  ai_duplicate_analyzer.py  cli.py  duplicate_finder.py
etc/scripts/gh_tool/tests/: test_duplicate_finder.py
etc/scripts/shortlinkmigration/: README.md  migrate_shortlinks.py  pyproject.toml
examples/: max_array.cpp  max_array_opt.cpp
godbolt/: Forc.toml
haskell/: .gitignore  Makefile  demangle.hs
lib/: .eslint-ce-lib.yml  .eslintrc.cjs  .eslintrc.js  app.interfaces.ts  artifact-utils.ts  asm-bcc.js  asm-cl.js  asm-docs-api.js  asm-docs.js  asm-parser-crystal.js  asm-parser-dart.js  asm-parser-dotnet.ts  asm-parser-dotnetcore.js  asm-parser-ewavr.js  asm-parser-ewavr.ts  asm-parser-sass.js  asm-parser-sass.ts  asm-parser-vc.js  asm-parser-vc.ts  asm-parser-vc6.js  asm-parser.js  asm-parser.ts  asm-raw.js  asm-raw.ts  asm-sass.js  asm.js  asmregex.js  asmregex.ts  assert.ts  aws.js  aws.ts  base-compiler.d.ts  base-compiler.js  base-compiler.ts  base-formatter.js  cfg.js  cfg.ts  cl-support.js  clientstate-normalizer.js  clientstate-normalizer.ts  (+99 more)
nbproject/: project.properties  project.xml
net_url/: _urls.ts
noscriptviews/: _layout.pug  compiler.pug  error.pug  index.pug
patches/: golden-layout+1.5.9.patch  mocha+8.4.0.patch
rust/: .gitignore  Cargo.toml
scripts/: build-codemirror.js  check-imports.js
shared/: .eslint-ce-lib.yml  .eslintrc.cjs  assert.ts  common-utils.ts  remote-utils.ts  rison.ts  stacktrace.ts  url-serialization.ts  url-testcases.ts
static/: .eslint-ce-static.yml  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.yml  .gitignore  .prettierrc.js  alert.interfaces.ts  alert.js  alert.ts  analytics.js  analytics.ts  ansi-to-html.interfaces.ts  ansi-to-html.js  ansi-to-html.ts  aprilfools2023.ts  artifact-handler.ts  asm-docs-api.js  asm-docs.js  asm-mode.js  asm.js  assembly-syntax.ts  assert.ts  ast-view.js  async-get.js  bootstrap-utils.ts  cfg-view.js  changelog.html  client.d.ts  codelens-handler.js  codelens-handler.ts  codemirror-mobile-editor.ts  codemirror-test.ts  colour.js  colour.ts  colours.css  colours.scss  compiler-picker.js  compiler-picker.ts  (+127 more)
static-old/: compiler.js  gcc.css  gcc.js  urlshorten-gist.js
test/: .eslintignore  .eslintrc  (+143 more)
(+3897 files in other folders)
