[tool.poetry]
name = "ce-properties-wizard"
version = "0.1.0"
description = "Interactive wizard for adding compilers to Compiler Explorer"
authors = ["Compiler Explorer Team"]
readme = "README.md"
packages = [{include = "ce_properties_wizard"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
inquirer = "^3.1.3"
pydantic = "^2.5.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^24.3.0"
ruff = "^0.1.6"
pytype = "^2023.11.21"

[tool.poetry.scripts]
ce-props-wizard = "ce_properties_wizard.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "N", "W"]

[tool.pytype]
inputs = ['ce_properties_wizard']
python_version = '3.10'