[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ce-properties-wizard"
version = "0.1.0"
description = "Interactive wizard for adding compilers to Compiler Explorer"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "inquirer>=3.1.3",
    "pydantic>=2.5.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "black>=26.3.0",
    "ruff>=0.15.0",
    "pytype>=2024.10.11",
]

[project.scripts]
ce-props-wizard = "ce_properties_wizard.main:cli"

[tool.uv]
package = true

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytype]
inputs = ['ce_properties_wizard']
python_version = '3.10'
