[project]
name = "compiler-explorer-docenizers"
version = "0.0.1"
description = "Assembly documentation generators for Compiler Explorer"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pandas>=2.2.0",
    "pdfminer.six>=20231228",
    "PyYAML>=6.0",
    "requests>=2.32.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflake
    "I", # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # line length
]