[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shortlink-migration"
version = "0.1.0"
description = "Migrate Compiler Explorer shortlinks from local storage to AWS S3/DynamoDB"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.26.0",
]

[project.scripts]
migrate-shortlinks = "migrate_shortlinks:main"

[tool.uv]
package = true
